Added message digest hex code functionality and updated language resources for the new version.

--- a/trunk/org/tamalin/panther/resources/labels_it.properties
+++ b/trunk/org/tamalin/panther/resources/labels_it.properties
@@ -23,5 +23,6 @@ unlockButtonLabel=Sblocca
 saveButtonLabel=Salva su File
 openButtonLabel=Apre File
 passwordLabelText=Password
-aboutBoxText=Panther: In Tamalin, Versione - 
-versionNumber=3.1.0 S2 -MONTH- -YEAR-
+aboutBoxText=Panther: In Tamalin, Versione 
+version_id=4.0 Aug. 2010
+copyright_text=Copyright 2008-2010 sotto la licenza Apache 2.0.
