--- a/trunk/org/tamalin/panther/resources/labels_sp.properties
+++ b/trunk/org/tamalin/panther/resources/labels_sp.properties
@@ -23,5 +23,6 @@ unlockButtonLabel=Desbloquear
 saveButtonLabel=Guardar en Archivo
 openButtonLabel=Abrir Archivo
 passwordLabelText=Cont rase\u00F1a
-aboutBoxText=Panther: Por Tamalin, Versi\u00F3n - 
-versionNumber=3.1.0 S2 -MONTH- -YEAR-
+aboutBoxText=Panther: Por Tamalin, Versi\u00F3n
+version_id=4.0 Augusto 2010
+copyright_text=Copyright 2008-2010 bajo la licencia Apache 2.0.
