--- a/trunk/org/tamalin/panther/resources/labels_en.properties
+++ b/trunk/org/tamalin/panther/resources/labels_en.properties
@@ -22,7 +22,7 @@ lockButtonLabel=Lock
 unlockButtonLabel=Unlock
 saveButtonLabel=Save to File
 openButtonLabel=Open File
-passwordLabelText=Password:
+password_label_text=Password
 aboutBoxText=Panther: Tamalin, Version 
-versionNumber=4.0 August 2010
+version_id=4.0 August 2010
 copyright_text=Copyright 2008-2010 under the Apache 2.0 License.
