Updated localizations and improved about dialog and improved general program flow: -removed unnecessary or outdated elements -organized complex method flows -minor interface updates -added logging features and verbose mode -made use of the ResourceBundle class for more efficient management of internationalization

--- a/trunk/org/tamalin/panther/resources/labels_en.properties
+++ b/trunk/org/tamalin/panther/resources/labels_en.properties
@@ -14,15 +14,39 @@
 #    limitations under the License.
 #
 
-encryptButtonLabel=Encrypt
-decryptButtonLabel=Decrypt
-hideButtonLabel=Hide
-aboutButtonLabel=About
-lockButtonLabel=Lock
-unlockButtonLabel=Unlock
-saveButtonLabel=Save to File
-openButtonLabel=Open File
-password_label_text=Password
-aboutBoxText=Panther: Tamalin, Version 
-version_id=4.0 August 2010
-copyright_text=Copyright 2008-2010 under the Apache 2.0 License.
+encrypt=Encrypt
+decrypt=Decrypt
+hide=Hide
+about=About
+lock=Lock
+unlock=Unlock
+save=Save to File
+open=Open File
+password=Password
+about_info=Panther: Tamalin, Version
+version=4.0 August 2010
+copyright=Copyright 2008-2011 under the Apache 2.0 License.
+
+# File Menu
+menu.file=File
+menu.file.open=Open
+menu.file.save=Save
+
+#Edit Menu
+menu.edit=Edit
+menu.edit.preferences=Preferences
+
+#Privacy Menu
+menu.privacy=Privacy
+menu.privacy.fingerprint=Fingerprint
+menu.privacy.encrypt=Encrypt
+menu.privacy.decrypt=Decrypt
+menu.operations=Operations
+menu.operations.lock=Lock
+menu.operations.unlock=Unlock
+menu.operations.hide=Hide
+
+#Help Menu
+menu.help=Help
+menu.help.help=Help
+menu.help.about=About
