Removed old unused methods and data files and updated internationalization files.

--- a/trunk/org/tamalin/panther/resources/labels_it.properties
+++ b/trunk/org/tamalin/panther/resources/labels_it.properties
@@ -14,15 +14,39 @@
 #    limitations under the License.
 #
 
-encryptButtonLabel=Cifrare
-decryptButtonLabel=Decrypt
-hideButtonLabel=Nascondere
-aboutButtonLabel=Circa
-lockButtonLabel=Blocca
-unlockButtonLabel=Sblocca
-saveButtonLabel=Salva su File
-openButtonLabel=Apre File
-passwordLabelText=Password
-aboutBoxText=Panther: In Tamalin, Versione 
-version_id=4.0 Aug. 2010
-copyright_text=Copyright 2008-2010 sotto la licenza Apache 2.0.
+encrypt=Cifrare
+decrypt=Decifrare
+hide=Nascondere
+about=Circa
+lock=Bloccare
+unlock=Sbloccare
+save=Salvare su File
+open=Aprire File
+password=Password
+about_info=Panther: Tamalin, Versione
+version=4.1 Beta Gennaio, 2011
+copyright=Copyright 2008-2011 sotto la licenza Apache 2.0.
+
+# File Menu
+menu.file=File
+menu.file.open=Aprire
+menu.file.save=Salvare
+
+#Edit Menu
+menu.edit=Modifica
+menu.edit.preferences=Preferenze
+
+#Privacy Menu
+menu.privacy=Privacy
+menu.privacy.fingerprint=impronta
+menu.privacy.encrypt=Cifrare
+menu.privacy.decrypt=Decifrare
+menu.operations=Operazioni
+menu.operations.lock=Bloccare
+menu.operations.unlock=sbloccare
+menu.operations.hide=Nascondere
+
+#Help Menu
+menu.help=Aiuto
+menu.help.help=Aiuto
+menu.help.about=Circa
