--- a/trunk/org/tamalin/panther/resources/labels_sp.properties
+++ b/trunk/org/tamalin/panther/resources/labels_sp.properties
@@ -14,15 +14,39 @@
 #    limitations under the License.
 #
 
-encryptButtonLabel=Cifrar
-decryptButtonLabel=Descifrar
-hideButtonLabel=Ocultar
-aboutButtonLabel=Sobre
-lockButtonLabel=Bloquear
-unlockButtonLabel=Desbloquear
-saveButtonLabel=Guardar en Archivo
-openButtonLabel=Abrir Archivo
-passwordLabelText=Cont rase\u00F1a
-aboutBoxText=Panther: Por Tamalin, Versi\u00F3n
-version_id=4.0 Augusto 2010
-copyright_text=Copyright 2008-2010 bajo la licencia Apache 2.0.
+encrypt=Cifrar
+decrypt=Descifrar
+hide=Ocultar
+about=Sobre
+lock=Bloquear
+unlock=Desbloquear
+save=Guardar en Archivo
+open=Abrir Archivo
+password=Contrase\u00f1a
+about_info=Panther: Tamalin, Versi\u00f3n
+version=4.1 Beta Enero 2011
+copyright=Copyright 2008-2011 bajo la licencia Apache 2.0.
+
+# File Menu
+menu.file=Archivo
+menu.file.open=Abrir
+menu.file.save=Guardar
+
+#Edit Menu
+menu.edit=Editar
+menu.edit.preferences=Preferencias
+
+#Privacy Menu
+menu.privacy=Privacidad
+menu.privacy.fingerprint=Huella Digital
+menu.privacy.encrypt=Cifrar
+menu.privacy.decrypt=Decifrar
+menu.operations=Operaciones
+menu.operations.lock=Bloquear
+menu.operations.unlock=Desbloquear
+menu.operations.hide=Ocultar
+
+#Help Menu
+menu.help=Ayudo
+menu.help.help=Ayudo
+menu.help.about=Sobre
