Removed unneeded import statement and fixed version number.

--- a/trunk/org/tamalin/panther/resources/labels_en.properties
+++ b/trunk/org/tamalin/panther/resources/labels_en.properties
@@ -24,7 +24,7 @@ save=Save to File
 open=Open File
 password=Password
 about_info=Panther: Tamalin, Version
-version=4.0 August 2010
+version=4.0 Beta August 2010
 copyright=Copyright 2008-2011 under the Apache 2.0 License.
 
 # File Menu
